tests/bad/frontendErrors/incDecTypeError.latte
int main() {
    boolean x = true;
    x++;
    return 0;
}
